OPSMN-5684: Fixed the modal dialog widget so that it does not overflow the screen viewport. The modal dialog body overflow is hidden using the vertical scrollbar.

--- a/www/app/styles/form.css
+++ b/www/app/styles/form.css
@@ -4,7 +4,6 @@
 }
 
 .os-form-association .os-modal-body {
-  max-height: 520px;
   display: flex;
   flex-direction: column;
 }
